result/subtask12-loop2/testcase02.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
INT_LIT 10
INT_LIT 10
INT_LIT 21
INT_LIT 30
INT_LIT 41
INT_LIT 50
create array: 5
> Insert `a` (addr: 1) to scope level 1
FOR
> Create symbol table (scope level 2)
> Insert `i` (addr: 2) to scope level 2
/home/share/hw2/input/subtask12-loop2/testcase02.cpp:4:17: error:  syntax error
     4 |    for( auto i : a ) {
       |                ^
Total lines: 4
